--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nmure/crawler-detect-bundle",
+    "name": "tempest/crawler-detect-bundle",
     "type": "symfony-bundle",
     "description": "A Symfony bundle for the Crawler-Detect library (detects bots/crawlers/spiders via the user agent)",
     "keywords": ["crawler", "bot", "detect", "user-agent", "symfony", "bundle"],
@@ -9,18 +9,23 @@
             "name": "Nicolas MURE",
             "email": "nm2107@hotmail.fr",
             "homepage": "https://github.com/nicolasmure"
+        },
+        {
+            "name": "James Ellis",
+            "email": "me@jamesellis.ca",
+            "homepage": "https://github.com/jamesgellis"
         }
     ],
     "require": {
-        "php": ">=7.1",
-        "symfony/framework-bundle": "~4.0",
-        "jaybizzle/crawler-detect": "1.*"
+        "php": ">=8.1",
+        "symfony/framework-bundle": "~6.3",
+        "jaybizzle/crawler-detect": "1.2.116"
     },
     "autoload": {
         "psr-4": { "Nmure\\CrawlerDetectBundle\\": "" }
     },
     "require-dev": {
         "phpunit/phpunit": "^6.5",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^6.3"
     }
 }
